# PasswordBlock

./: .gitignore  Cargo.toml  LICENSE  README.md
contracts/password_vault/: Cargo.toml
contracts/password_vault/src/: lib.rs
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AddPassword.tsx  Header.tsx  MasterPassword.tsx  PasswordCard.tsx  PasswordGenerator.tsx  PasswordList.tsx
frontend/src/contracts/password-vault/: README.md  package-lock.json  package.json
frontend/src/contracts/password-vault/src/: index.ts
frontend/src/crypto/: encryption.ts
frontend/src/hooks/: usePasswords.ts  useWallet.ts
frontend/src/stellar/: contract.ts  kit.ts  wallet.ts
frontend/src/types/: index.ts
