[package]
name = "password-vault"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "22.0.1"

[dev-dependencies]
soroban-sdk = { version = "22.0.1", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
